--- a/public/index.html
+++ b/public/index.html
@@ -3,9 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="stylesheets/index.css">
     <title>JS GAME</title>
 </head>
 <body>
-    <h1>Hello World!</h1>
+    <div id="game-window">
+        <canvas id="canvas" height="600" width="800">
+        </canvas>
+    </div>
+    <script src="javascripts/globals.js"></script>
+    <script src="javascripts/index.js"></script>
 </body>
 </html>
