add player model

--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,8 @@
         </canvas>
     </div>
     <script src="javascripts/globals.js"></script>
+    <script src="javascripts/models/player.js"></script>
     <script src="javascripts/index.js"></script>
+
 </body>
 </html>
